--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #ff862a;
+    --laranja-claro: #070bd2;
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #8f10b9;
 }
 
 body {
@@ -21,14 +24,14 @@ section {
 
 
 .nav-link {
-    color: #CB6D43;
+    color: #e6deee;
     font-weight: 600;
 }
 
 .inicio-fundo {
-    
+    /* aula 3 */
     background-image: url('img/4965007.jpg');
-    
+    /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
     border-radius: 80px;
@@ -38,7 +41,7 @@ section {
     margin: 0 auto;
 }
 
-
+/* posicionamento para a imagem à direita */
 .img-inicio {
     position: absolute;
     right: 0;
@@ -61,9 +64,7 @@ section {
     border-radius: 30px;
     border: none;
     width: 14em;
-    
     height: 3em;
-    
     align-content: center;
 
 }
@@ -73,7 +74,7 @@ section {
 }
 
 
-#tropicalia {
+#justinbieber {
     position: relative;
     padding-top: 5rem;
     margin-top: 3rem;
@@ -81,16 +82,16 @@ section {
     background: url('img/flor.png') top right no-repeat,
         url('img/flor-esquerda.png') bottom left no-repeat;
     background-size: 180px 180px;
-    
+    /* Ajuste o tamanho conforme necessário */
 }
 
-#tropicalia .container {
+#justinbieber .container {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     z-index: 1;
-    
+    /* Garante que o conteúdo fica acima das imagens do background */
 }
 
 
@@ -115,23 +116,23 @@ h2 {
     background-image: url('img/4965007.jpg');
     background-size: cover;
     padding: 4rem 0;
-    
+    /* Espaçamento interno para a seção de contato */
 
 }
 
 .formulario {
     background-color: #ffffff;
     padding: 2rem;
-    
+    /* Espaçamento interno dentro do formulário */
     border-radius: 10px;
-    
+    /* Borda arredondada para o formulário */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
+    /* Sombra suave para destacar o formulário */
     font-weight: bold;
 }
 
 .formulario button {
-    background-color: #CB6D43;
+    background-color: #e1d3e4;
     border: none;
     font-weight: bold;
 }
@@ -139,4 +140,61 @@ h2 {
 .form-control {
     background-color: #F1EDEF;
 }
+.menu-acessibilidade{
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
+}
 
+.rotacao-botao{
+    transform: rotate(-90deg);
+    transform-origin: right center;
+}
+
+.opcoes-acessibilidade{
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.opcoes-acessibilidade button{
+    margin-bottom: 5px;
+}
+.apresenta-lista{
+    display: none;
+}
+
+.alto-contraste{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+
+.alto-contraste header,
+.alto-contraste footer,
+.alto-contraste .formulario{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+
+.alto-contraste .nav-link{
+    color: var(--alto-contraste-link);
+}
+
+.alto-contraste .botao-inicio,
+.alto-contraste .formulario button,
+.alto-contraste .btn-primary{
+    background-color: var(--alto-contraste-link);
+    color: var(--alto-contraste-fundo)
+}
+
+.alto-contraste #justinbieber {
+    background: none;
+}
+
+.alto-contraste #galeria {
+    background-color: var(--alto-contraste-fundo);
+}
+.alto-contraste .fundo-galeria {
+    background: none;
+}
